--- a/Sirius/css/lobby.css
+++ b/Sirius/css/lobby.css
@@ -1,10 +1,13 @@
 #gamesListContainer {
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
+	flex-wrap: wrap;
+
 }
 
 .availableGame {
 	width: 20vw;
 	height: 20vh;
 	border: black 1px solid;
+	margin-bottom: 25px;
 }
