--- a/Sirius/css/game.css
+++ b/Sirius/css/game.css
@@ -1,6 +1,10 @@
 
 body{
 	position: relative;
+	background-image: url("../images/background_inside_castle.jpg");
+	background-size: 100vw 100vh;
+	width: 100vw;
+	height: 100vh;
 }
 
 .attackButton {
@@ -35,4 +39,5 @@ body{
 	border: black 2px solid;
 	border-radius: 10px;
 	margin-top: 20px;
+	color: white;
 }
