--- a/Sirius/css/game.css
+++ b/Sirius/css/game.css
@@ -1,10 +1,8 @@
 
 body{
 	position: relative;
-	background-image: url("../images/background_inside_castle.jpg");
-	background-size: 100vw 100vh;
-	width: 100vw;
-	height: 100vh;
+	max-width: 100vw;
+	max-height: 100vh;
 }
 
 .attackButton {
@@ -18,6 +16,8 @@ body{
 #attackButtons {
 	display:flex;
 	justify-content: space-around;
+	position: absolute;
+	/* bottom:  1vh; */
 }
 
 #attack1 {
@@ -33,11 +33,13 @@ body{
 }
 
 #JSONViewer {
+	position: absolute;
+	top:0;
+	left:0;
 	display: block;
 	width: 30vw;
 	height: 30vh;
 	border: black 2px solid;
 	border-radius: 10px;
-	margin-top: 20px;
 	color: white;
 }
