--- a/Sirius/css/game.css
+++ b/Sirius/css/game.css
@@ -1,10 +1,3 @@
-
-body{
-	position: relative;
-	max-width: 100vw;
-	max-height: 100vh;
-}
-
 .attackButton {
 	display: block;
 	width: 10vw;
@@ -17,8 +10,11 @@ body{
 	display:flex;
 	justify-content: space-around;
 	position: absolute;
-	/* bottom:  1vh; */
+	top:1vh;
+	right:0;
+	width: 50vw;
 }
+
 
 #attack1 {
 	background-color: blue;
@@ -30,6 +26,18 @@ body{
 
 #attack3 {
 	background-color: red;
+}
+
+body{
+	position: relative;
+}
+
+
+canvas {
+	width: 100vw;
+	height: 100vh;
+	max-width: 100vw;
+	max-height: 100vh;
 }
 
 #JSONViewer {
