--- a/Sirius/css/shared.css
+++ b/Sirius/css/shared.css
@@ -1,13 +1,12 @@
 * {
-	margin:0;
 	box-sizing: border-box;
 }
 
 html {
+	margin:0;
+	padding:0;
+	width: 100vw;
+	height: 100vh;
 	max-width: 100vw;
 	max-height: 100vh;
-}
-
-.input{
-	margin-bottom: 5px;
 }
