--- a/Sirius/css/game.css
+++ b/Sirius/css/game.css
@@ -30,15 +30,16 @@
 
 body{
 	position: relative;
+	margin: 0;
 }
 
 
-canvas {
+/* canvas {
 	width: 100vw;
 	height: 100vh;
 	max-width: 100vw;
 	max-height: 100vh;
-}
+} */
 
 #JSONViewer {
 	position: absolute;
