--- a/Sirius/css/game.css
+++ b/Sirius/css/game.css
@@ -29,26 +29,38 @@
 }
 
 body{
-	position: relative;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	background-color: black;
+}
+
+canvas {
+	z-index: -5;
+	position: absolute;
+	top:0;
+}
+
+#canvasContainer {
+	z-index: -5;
+	width: 1600px;
+	height: 700px;
+}
+
+html {
+	width: 100%;
+	height: 100%;
 	margin: 0;
 }
 
+#portrait {
+	z-index: 5;
+	width: 150px;
+	height: 156px;
+}
 
-/* canvas {
-	width: 100vw;
-	height: 100vh;
-	max-width: 100vw;
-	max-height: 100vh;
-} */
-
-#JSONViewer {
-	position: absolute;
-	top:0;
-	left:0;
-	display: block;
-	width: 30vw;
-	height: 30vh;
-	border: black 2px solid;
-	border-radius: 10px;
-	color: white;
+#portraitContainer {
+	z-index: 5;
+	width: 150px;
+	height: 156px;
 }
