--- a/Sirius/css/lobby.css
+++ b/Sirius/css/lobby.css
@@ -1,40 +1,48 @@
-html{
-	background-image: url("../images/background_hyrule_castle.jpg");
-	width: 100vw;
-	height: 100vh;
-}
-
-
 .availableGame {
-	width: 20vw;
-	height: 20vh;
+	width: 10vw;
+	height: 12vh;
 	border: black 1px solid;
 	margin-bottom: 25px;
+	border-radius: 40%;
+}
+
+.content {
+	text-align: center;
+	font-weight: bold;
+	font-size: 0.8vw;
+}
+
+#eye {
+	width: 324px;
+	height: 300px;
+	background-image: url("../images/324px-BotW_Blue_Sheikah_Eye_Symbol.png");
+	position: absolute;
+	top: 3vh;
+	left: 3vw;
 }
 
 #gamesListContainer {
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
+	overflow: scroll;
+	overflow-x: hidden;
+	width: 40vw;
+	height: 30vh;
+	position: absolute;
+	top: 30vh;
+	left: 30vw;
+}
+
+html{
+	background-image: url("../images/background_hyrule_castle.jpg");
+	width: 100vw;
+	height: 100vh;
+
 
 }
+
 
 #startButton {
 	max-width: 10vw;
-}
-
-p{
-	max-width: 10vw;
-}
-
-#testBox {
-	display: flex;
-	width: 20vw;
-}
-
-a{
-	margin-top: 1.5vh;
-	margin-left: 1.5vw;
-	width: 50px;
-	height: 23px;
 }
