--- a/Sirius/css/lobby.css
+++ b/Sirius/css/lobby.css
@@ -19,6 +19,7 @@
 	position: absolute;
 	top: 3vh;
 	left: 3vw;
+	opacity: 0;
 }
 
 #gamesListContainer {
@@ -28,7 +29,7 @@
 	overflow: scroll;
 	overflow-x: hidden;
 	width: 40vw;
-	height: 30vh;
+	height: 32vh;
 	position: absolute;
 	top: 30vh;
 	left: 30vw;
